# learn-ocaml-workshop

./: .gitignore  .gitmodules  README.org  make_learn_ocaml_directory.sh  make_witt.sh
02-exercises/: dune  jbuild
02-exercises/01-introduction/: dune  jbuild  problem.ml
02-exercises/02-basic_types/: dune  jbuild  problem.ml  problem.mli
02-exercises/03-define_functions/: dune  jbuild  problem.ml  problem.mli
02-exercises/04-call_functions/: dune  jbuild  problem.ml  problem.mli
02-exercises/05-twice/: dune  jbuild  problem.ml  problem.mli
02-exercises/06-pattern-matching/: dune  jbuild  problem.ml  problem.mli
02-exercises/07-simple_recursion/: dune  jbuild  problem.ml  problem.mli
02-exercises/08-list_intro/: dune  jbuild  problem.ml  problem.mli
02-exercises/09-list_range/: dune  problem.ml  problem.mli
02-exercises/10-higher_order_functions/: problem.ml  problem.mli
02-exercises/10-list_product/: dune  jbuild  problem.ml  problem.mli
02-exercises/11-labeled_arguments/: problem.ml
02-exercises/11-sum_product/: dune  jbuild  problem.ml  problem.mli
02-exercises/12-labeled_arguments/: problem.ml
02-exercises/12-labelled_arguments/: problem.mli
02-exercises/12-list_functions/: dune  problem.ml  problem.mli
02-exercises/12-list_min/: problem.ml
02-exercises/13-arrays/: dune  problem.ml  problem.mli
02-exercises/13-labelled_arguments/: dune  problem.ml  problem.mli
02-exercises/13-largest_smallest/: problem.ml  problem.mli
02-exercises/13-list_functions/: dune  problem.ml
02-exercises/13-variants/: problem.mli
02-exercises/14-variants/: dune  jbuild  problem.ml  problem.mli
02-exercises/15-options/: dune  problem.ml  (+1 more)
(+161 files in other folders)
