;; -*- scheme -*-

(library
 (name problem_11)
 (libraries base stdio)
 (inline_tests)
 (preprocess (pps ppx_jane)))

(env
  (dev
    (flags (:standard
            -w -20 
            -w -27 
            -w -32 
            -w -34 
            -w -37 
            -w -39)))
  (release 
   (flags (:standard))))
